[package]
name = "portfolioserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
actix-files = "0.6.2"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0.70"

[profile.release]
lto=true
opt-level = 2

[profile.release.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1